<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tech.c3nx.keepinview.OverviewFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/h1"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:paddingTop="10dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/h2"
            android:layout_gravity="center"
            android:paddingBottom="20sp"
            android:fontFamily="sans-serif-smallcaps"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/h3"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_gravity="center"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textColor="#0e9797"
                    android:paddingBottom="10sp"
                    android:gravity="center"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ex_comment"
                    android:textStyle="italic"
                    android:paddingBottom="20dp"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_year"
                    android:paddingBottom="10dp"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="14sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/this_year"
                    android:paddingBottom="10dp"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="14sp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/dollar"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingRight="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/h4"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_gravity="center"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textColor="#0e9797"
                    android:paddingBottom="10sp"
                    android:textSize="15sp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/non_oil"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/n_oil"
                        android:layout_gravity="center_vertical"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/oil"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/oil"
                        android:layout_gravity="center_vertical"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/revenue"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/revenue"
                        android:layout_gravity="center_vertical"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/unknown"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unknown"
                        android:layout_gravity="center_vertical"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rev_comment"
                    android:textStyle="italic"
                    android:paddingRight="5dp"/>
            </LinearLayout>
        </LinearLayout>



    </LinearLayout>


</ScrollView>
